Fix T62012: Non-animated property, stuck in previously keyframed values

Was missing ID recalc tag.